--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "private": true,
   "dependencies": {},
   "devDependencies": {
-    "@nx/js": "22.1.1",
+    "@nx/express": "^22.1.1",
+    "@nx/jest": "^22.1.1",
+    "@nx/js": "^22.1.1",
+    "@nx/react": "^22.1.1",
     "@nx/workspace": "22.1.1",
     "nx": "22.1.1"
   }
